full results truffle, before truffle + dispatch

--- a/final_results_paper.ipynb
+++ b/final_results_paper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -89,15 +89,15 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>39900</td>\n",
-       "      <td>39900</td>\n",
-       "      <td>39900</td>\n",
-       "      <td>39900</td>\n",
-       "      <td>39900</td>\n",
-       "      <td>39900</td>\n",
-       "      <td>39900</td>\n",
-       "      <td>39900.000000</td>\n",
-       "      <td>39900.000000</td>\n",
+       "      <td>40800</td>\n",
+       "      <td>40800</td>\n",
+       "      <td>40800</td>\n",
+       "      <td>40800</td>\n",
+       "      <td>40800</td>\n",
+       "      <td>40800</td>\n",
+       "      <td>40800</td>\n",
+       "      <td>40800.000000</td>\n",
+       "      <td>40800.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>unique</th>\n",
@@ -107,30 +107,30 @@
        "      <td>5</td>\n",
        "      <td>8</td>\n",
        "      <td>4</td>\n",
-       "      <td>798</td>\n",
+       "      <td>816</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
-       "      <td>openj9</td>\n",
+       "      <td>hotspot</td>\n",
        "      <td>8</td>\n",
        "      <td>graalvm EE 8</td>\n",
-       "      <td>interpreter</td>\n",
-       "      <td>b_sort</td>\n",
+       "      <td>visitor</td>\n",
+       "      <td>m_fannkuchredux</td>\n",
        "      <td>minijava</td>\n",
-       "      <td>1565010983779</td>\n",
+       "      <td>1564563606050</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>freq</th>\n",
        "      <td>14400</td>\n",
-       "      <td>20700</td>\n",
-       "      <td>5550</td>\n",
+       "      <td>21600</td>\n",
+       "      <td>6000</td>\n",
        "      <td>9600</td>\n",
        "      <td>5100</td>\n",
-       "      <td>19500</td>\n",
+       "      <td>20400</td>\n",
        "      <td>50</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -144,7 +144,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>7.422510</td>\n",
+       "      <td>7.363105</td>\n",
        "      <td>24.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -156,8 +156,8 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>5.019601</td>\n",
-       "      <td>14.431051</td>\n",
+       "      <td>4.995823</td>\n",
+       "      <td>14.431047</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -180,7 +180,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2.948882</td>\n",
+       "      <td>2.975891</td>\n",
        "      <td>12.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -192,7 +192,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>6.470132</td>\n",
+       "      <td>6.409946</td>\n",
        "      <td>24.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -204,7 +204,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>10.753209</td>\n",
+       "      <td>10.707755</td>\n",
        "      <td>37.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -224,34 +224,34 @@
        "</div>"
       ],
       "text/plain": [
-       "            vm vm_version       vm_full      pattern program  language  \\\n",
-       "count    39900      39900         39900        39900   39900     39900   \n",
-       "unique       4          3             8            5       8         4   \n",
-       "top     openj9          8  graalvm EE 8  interpreter  b_sort  minijava   \n",
-       "freq     14400      20700          5550         9600    5100     19500   \n",
-       "mean       NaN        NaN           NaN          NaN     NaN       NaN   \n",
-       "std        NaN        NaN           NaN          NaN     NaN       NaN   \n",
-       "min        NaN        NaN           NaN          NaN     NaN       NaN   \n",
-       "25%        NaN        NaN           NaN          NaN     NaN       NaN   \n",
-       "50%        NaN        NaN           NaN          NaN     NaN       NaN   \n",
-       "75%        NaN        NaN           NaN          NaN     NaN       NaN   \n",
-       "max        NaN        NaN           NaN          NaN     NaN       NaN   \n",
+       "             vm vm_version       vm_full  pattern          program  language  \\\n",
+       "count     40800      40800         40800    40800            40800     40800   \n",
+       "unique        4          3             8        5                8         4   \n",
+       "top     hotspot          8  graalvm EE 8  visitor  m_fannkuchredux  minijava   \n",
+       "freq      14400      21600          6000     9600             5100     20400   \n",
+       "mean        NaN        NaN           NaN      NaN              NaN       NaN   \n",
+       "std         NaN        NaN           NaN      NaN              NaN       NaN   \n",
+       "min         NaN        NaN           NaN      NaN              NaN       NaN   \n",
+       "25%         NaN        NaN           NaN      NaN              NaN       NaN   \n",
+       "50%         NaN        NaN           NaN      NaN              NaN       NaN   \n",
+       "75%         NaN        NaN           NaN      NaN              NaN       NaN   \n",
+       "max         NaN        NaN           NaN      NaN              NaN       NaN   \n",
        "\n",
        "            timestamp          time           idx  \n",
-       "count           39900  39900.000000  39900.000000  \n",
-       "unique            798           NaN           NaN  \n",
-       "top     1565010983779           NaN           NaN  \n",
+       "count           40800  40800.000000  40800.000000  \n",
+       "unique            816           NaN           NaN  \n",
+       "top     1564563606050           NaN           NaN  \n",
        "freq               50           NaN           NaN  \n",
-       "mean              NaN      7.422510     24.500000  \n",
-       "std               NaN      5.019601     14.431051  \n",
+       "mean              NaN      7.363105     24.500000  \n",
+       "std               NaN      4.995823     14.431047  \n",
        "min               NaN      0.817689      0.000000  \n",
-       "25%               NaN      2.948882     12.000000  \n",
-       "50%               NaN      6.470132     24.500000  \n",
-       "75%               NaN     10.753209     37.000000  \n",
+       "25%               NaN      2.975891     12.000000  \n",
+       "50%               NaN      6.409946     24.500000  \n",
+       "75%               NaN     10.707755     37.000000  \n",
        "max               NaN     22.922401     49.000000  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
        "ci    0.013048     0.017202   0.059237  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
        "shs   0.881541     1.284896   1.116606  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,9 @@
       "vm:['graalvm EE'],vm_version:['8'],vm_full:['graalvm EE 8'],pattern:['interpreter'],program:['b_fibonacci'],language:['boa'],\n",
       "vm:['graalvm EE'],vm_version:['8'],vm_full:['graalvm EE 8'],pattern:['interpreter'],program:['b_sort'],language:['boa'],\n",
       "vm:['graalvm EE'],vm_version:['8'],vm_full:['graalvm EE 8'],pattern:['interpreter'],program:['m_fibonacci'],language:['minijava'],\n",
-      "vm:['graalvm EE'],vm_version:['8'],vm_full:['graalvm EE 8'],pattern:['interpreter'],program:['l_fractal'],language:['logo'],\n"
+      "vm:['graalvm EE'],vm_version:['8'],vm_full:['graalvm EE 8'],pattern:['interpreter'],program:['l_fractal'],language:['logo'],\n",
+      "mean shs 2.181349249786987\n",
+      "mean shi 1.7986891271713177\n"
      ]
     },
     {
@@ -643,7 +645,7 @@
        "shi   2.326326     1.201098   2.530818  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,10 +653,14 @@
    "source": [
     "print('Graal VM (Interpreter)')\n",
     "graal_interpreter={}\n",
+    "means_shs=[]\n",
+    "means_shi=[]\n",
     "for p in df.program.unique():\n",
     "    df2 = df.query('vm_version == \"8\" & vm == \"graalvm EE\" & program == \"%s\" & pattern == \"interpreter\"  & idx > 10' % p)\n",
     "    times = df2.time\n",
     "    mean = times.mean()\n",
+    "    means_shs.append(hotspot_switch[p]['mean'] / mean)\n",
+    "    means_shi.append(hotspot_interpreter[p]['mean'] / mean)\n",
     "    graal_interpreter[p] = {\n",
     "        'mean': mean,\n",
     "        'ci': confidence_interval(times),\n",
@@ -665,12 +671,14 @@
     "    for c in ['vm', 'vm_version', 'vm_full', 'pattern', 'program', 'language',]:\n",
     "        s += c + \":\" + str(df2[c].unique()) + \",\"\n",
     "    print(s)\n",
+    "print('mean shs', gmean(means_shs))\n",
+    "print('mean shi', gmean(means_shi))\n",
     "pd.DataFrame(graal_interpreter)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -679,13 +687,16 @@
      "text": [
       "Graal VM (Interpreter)\n",
       "vm:['graalvm EE'],vm_version:['8'],vm_full:['graalvm EE 8'],pattern:['truffle'],program:['f_buffers'],language:['fsm'],\n",
-      "vm:[],vm_version:[],vm_full:[],pattern:[],program:[],language:[],\n",
-      "vm:[],vm_version:[],vm_full:[],pattern:[],program:[],language:[],\n",
-      "vm:[],vm_version:[],vm_full:[],pattern:[],program:[],language:[],\n",
+      "vm:['graalvm EE'],vm_version:['8'],vm_full:['graalvm EE 8'],pattern:['truffle'],program:['m_fannkuchredux'],language:['minijava'],\n",
+      "vm:['graalvm EE'],vm_version:['8'],vm_full:['graalvm EE 8'],pattern:['truffle'],program:['m_sort'],language:['minijava'],\n",
+      "vm:['graalvm EE'],vm_version:['8'],vm_full:['graalvm EE 8'],pattern:['truffle'],program:['m_binarytree'],language:['minijava'],\n",
       "vm:['graalvm EE'],vm_version:['8'],vm_full:['graalvm EE 8'],pattern:['truffle'],program:['b_fibonacci'],language:['boa'],\n",
       "vm:['graalvm EE'],vm_version:['8'],vm_full:['graalvm EE 8'],pattern:['truffle'],program:['b_sort'],language:['boa'],\n",
       "vm:['graalvm EE'],vm_version:['8'],vm_full:['graalvm EE 8'],pattern:['truffle'],program:['m_fibonacci'],language:['minijava'],\n",
-      "vm:['graalvm EE'],vm_version:['8'],vm_full:['graalvm EE 8'],pattern:['truffle'],program:['l_fractal'],language:['logo'],\n"
+      "vm:['graalvm EE'],vm_version:['8'],vm_full:['graalvm EE 8'],pattern:['truffle'],program:['l_fractal'],language:['logo'],\n",
+      "mean shs 2.415627489633315\n",
+      "mean shi 1.9918694364618057\n",
+      "mean sgi 1.1074006099065548\n"
      ]
     },
     {
@@ -723,56 +734,56 @@
        "    <tr>\n",
        "      <th>mean</th>\n",
        "      <td>2.331565</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2.708258</td>\n",
+       "      <td>5.923047</td>\n",
+       "      <td>3.206493</td>\n",
        "      <td>1.019734</td>\n",
        "      <td>1.071101</td>\n",
-       "      <td>4.629287</td>\n",
+       "      <td>4.597800</td>\n",
        "      <td>4.442771</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ci</th>\n",
        "      <td>0.003411</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.006631</td>\n",
+       "      <td>0.008606</td>\n",
+       "      <td>0.013266</td>\n",
        "      <td>0.017757</td>\n",
        "      <td>0.017548</td>\n",
-       "      <td>0.005014</td>\n",
+       "      <td>0.009679</td>\n",
        "      <td>0.046542</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>shs</th>\n",
        "      <td>3.361267</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2.461641</td>\n",
+       "      <td>2.767438</td>\n",
+       "      <td>2.201069</td>\n",
        "      <td>2.005040</td>\n",
        "      <td>1.596805</td>\n",
-       "      <td>2.548526</td>\n",
+       "      <td>2.565979</td>\n",
        "      <td>2.800093</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>shi</th>\n",
        "      <td>1.734699</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.948282</td>\n",
+       "      <td>2.517282</td>\n",
+       "      <td>1.827086</td>\n",
        "      <td>1.757329</td>\n",
        "      <td>1.811379</td>\n",
-       "      <td>1.983450</td>\n",
+       "      <td>1.997033</td>\n",
        "      <td>2.507681</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sgi</th>\n",
        "      <td>1.096548</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.127391</td>\n",
+       "      <td>1.116446</td>\n",
+       "      <td>1.090677</td>\n",
        "      <td>1.171237</td>\n",
        "      <td>0.778644</td>\n",
-       "      <td>1.651364</td>\n",
+       "      <td>1.662673</td>\n",
        "      <td>0.990858</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -780,22 +791,22 @@
        "</div>"
       ],
       "text/plain": [
-       "      f_buffers  m_fannkuchredux  m_sort  m_binarytree  b_fibonacci    b_sort  \\\n",
-       "mean   2.331565              NaN     NaN           NaN     1.019734  1.071101   \n",
-       "ci     0.003411              NaN     NaN           NaN     0.017757  0.017548   \n",
-       "shs    3.361267              NaN     NaN           NaN     2.005040  1.596805   \n",
-       "shi    1.734699              NaN     NaN           NaN     1.757329  1.811379   \n",
-       "sgi    1.096548              NaN     NaN           NaN     1.171237  0.778644   \n",
+       "      f_buffers  m_fannkuchredux    m_sort  m_binarytree  b_fibonacci  \\\n",
+       "mean   2.331565         2.708258  5.923047      3.206493     1.019734   \n",
+       "ci     0.003411         0.006631  0.008606      0.013266     0.017757   \n",
+       "shs    3.361267         2.461641  2.767438      2.201069     2.005040   \n",
+       "shi    1.734699         1.948282  2.517282      1.827086     1.757329   \n",
+       "sgi    1.096548         1.127391  1.116446      1.090677     1.171237   \n",
        "\n",
-       "      m_fibonacci  l_fractal  \n",
-       "mean     4.629287   4.442771  \n",
-       "ci       0.005014   0.046542  \n",
-       "shs      2.548526   2.800093  \n",
-       "shi      1.983450   2.507681  \n",
-       "sgi      1.651364   0.990858  "
+       "        b_sort  m_fibonacci  l_fractal  \n",
+       "mean  1.071101     4.597800   4.442771  \n",
+       "ci    0.017548     0.009679   0.046542  \n",
+       "shs   1.596805     2.565979   2.800093  \n",
+       "shi   1.811379     1.997033   2.507681  \n",
+       "sgi   0.778644     1.662673   0.990858  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,10 +814,16 @@
    "source": [
     "print('Graal VM (Interpreter)')\n",
     "truffle_interpreter={}\n",
+    "means_shs=[]\n",
+    "means_shi=[]\n",
+    "means_sgi=[]\n",
     "for p in df.program.unique():\n",
     "    df2 = df.query('vm_version == \"8\" & vm == \"graalvm EE\" & program == \"%s\" & pattern == \"truffle\"  & idx > 10' % p)\n",
     "    times = df2.time\n",
     "    mean = times.mean()\n",
+    "    means_shs.append(hotspot_switch[p]['mean'] / mean)\n",
+    "    means_shi.append(hotspot_interpreter[p]['mean'] / mean)\n",
+    "    means_sgi.append(graal_interpreter[p]['mean'] / mean)\n",
     "    truffle_interpreter[p] = {\n",
     "        'mean': mean,\n",
     "        'ci': confidence_interval(times),\n",
@@ -818,6 +835,9 @@
     "    for c in ['vm', 'vm_version', 'vm_full', 'pattern', 'program', 'language',]:\n",
     "        s += c + \":\" + str(df2[c].unique()) + \",\"\n",
     "    print(s)\n",
+    "print('mean shs', gmean(means_shs))\n",
+    "print('mean shi', gmean(means_shi))\n",
+    "print('mean sgi', gmean(means_sgi))\n",
     "pd.DataFrame(truffle_interpreter)"
    ]
   }
